chrome/browser/vr/testapp/gl_renderer.cc
@@ -15,6 +15,14 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace vr {
 
+namespace {
+
+void OnPresentedFrame(const gfx::PresentationFeedback& feedback) {
+  // Do nothing for now.
+}
+
+}  // namespace
+
 GlRenderer::GlRenderer(const scoped_refptr<gl::GLSurface>& surface,
                        vr::VrTestContext* vr)
     : surface_(surface), vr_(vr), weak_ptr_factory_(this) {}
@@ -44,7 +52,7 @@ void GlRenderer::RenderFrame() {
   context_->MakeCurrent(surface_.get());
   vr_->DrawFrame();
   PostRenderFrameTask(
-      surface_->SwapBuffers(gl::GLSurface::PresentationCallback()));
+      surface_->SwapBuffers(base::BindRepeating(&OnPresentedFrame)));
 }
 
 void GlRenderer::PostRenderFrameTask(gfx::SwapResult result) {
